--- a/crud-spring/src/main/resources/templates/cadastrar.html
+++ b/crud-spring/src/main/resources/templates/cadastrar.html
@@ -55,8 +55,8 @@
                     id="email"
                     placeholder="Informe o e-mail"
                   />
-                <!-- </div>
-                <div class="form-group">
+                </div>
+                <!-- <div class="form-group">
                   <label for="email">Email</label>
                   <input
                     th:field=""
@@ -64,8 +64,8 @@
                     class="form-control"
                     id="email"
                     placeholder="Informe o email"
-                  /> -->
-                </div>
+                  />
+                </div> -->
                 <div class="form-group">
                   <label for="password">Senha</label>
                   <input
